# qcal_rs

./: .gitignore  Cargo.toml  FIX_HISTORY.md  README.md  STUDY_CODE.md  history.txt
crates/meval/: Cargo.toml
crates/meval/src/: expr.rs  lib.rs  tokenizer.rs
docs/: FIX_HISTORY.md  KEY_ARROW.md  LIBRARY_DOCUMENTATION.md  MATHEMATICAL_FORMULAS.md  README.md  STUDY_CODE.md  UNICODE.md
examples/: number_theory.rs
src/: Makefile  Makefile.in  fprice.rs  lib.rs  main.rs  number_theory.rs  qalc  unittest
src/.deps/: qalc.Po  unittest.Po
src/calculator/: converter.rs  engine.rs  evaluator.rs  formatter.rs  lexer.rs  parser.rs
src/number_theory/: parity.rs  primes.rs  rounding.rs  totient.rs  traits.rs
src/readline/: mod.rs
src/save_history/: mod.rs
src/unicode/: mod.rs
tests/: Makefile  README.md
