[package]
name = "qcal_rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

description = "Number theory functions library - Rust port of libqalculate number theory module"
license = "GPL-2.0-or-later"
repository = "https://github.com/Qalculate/libqalculate"
keywords = ["math", "number-theory", "primes", "gcd", "lcm"]
categories = ["mathematics", "algorithms"]

[dependencies]
atty = "0.2"
meval = "0.2"
rug = "1.24"
rustyline = "15"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "qalculate"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
