[package]
name = "meval"
version = "0.3.0"
edition = "2024"

[dependencies]
fnv = "1.0.7"
nom = "8.0.0"
serde = { version = "1", optional = true }

[dev-dependencies]
gnuplot = "0.0.46"
serde_derive = "1.0.228"
serde_json = "1.0.149"
serde_test = "1.0.177"
toml = "1.1.2"

[features]
default = []

[package.metadata.docs.rs]
features = [ "serde" ]
